--- a/templates/vpc/v4/infrastructure/cloudformation.yaml
+++ b/templates/vpc/v4/infrastructure/cloudformation.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: VPC, PuclicSubnet, PrivateSubnet, etc newww
+Description: VPC, PuclicSubnet, PrivateSubnet, etc
 
 Mappings:
   SubnetConfig:
